--- a/estilos.css
+++ b/estilos.css
@@ -36,7 +36,9 @@ body {
     background-color: rgb(73, 72, 72);
     color: honeydew;  
 }
-
+.boton:hover {
+    background-color: rgb(36, 35, 35);
+}
 a{
     color: rgb(37, 106, 196);
     text-decoration: none;
