--- a/estilos.css
+++ b/estilos.css
@@ -9,6 +9,7 @@ body {
 }
 
 .bloque{
+    background-image: url(img/photo-1593698054469-2bb6fdf4b512.jpeg);
     padding: 0;
     margin: 0;
     border: 0;
