--- a/estilos.css
+++ b/estilos.css
@@ -43,3 +43,7 @@ a{
     color: rgb(37, 106, 196);
     text-decoration: none;
 }
+
+.container{
+    box-shadow: 5px 5px 10px 5px rgb(110, 98, 98);
+}
