--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,10 @@ footer{
     width: auto;
     height: auto;
     margin: 0;
-    padding: 10px;
+    padding: 15px;
+}
+
+footer p{
     font-size: 15px;
     text-align: left;
     color: honeydew;
@@ -28,8 +31,8 @@ header{
 }
 
 .blackhole{
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
 }
 .texto{
     color: white;
