--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,12 @@ header{
 }
 
 .blackhole{
-    width: 300px;
-    height: 300px;
+    width: auto;
+    height: auto;
 }
 .texto{
     color: white;
+    font-size: 18x;
 }
 
 .fondo{
